# NexLua

./: .gitignore  LICENSE  README.md  gradle.properties  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.lua  main2.lua
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/luajava/: com_luajava_luajit_LuaJitNatives.cpp  com_luajava_luajit_LuaJitNatives.h  jua.cpp  jua.h  juaapi.cpp  juaapi.h  jualib.cpp
app/src/main/cpp/luajit-include/: luacustom.h
app/src/main/cpp/luajit/host/: buildvm
app/src/main/java/com/luajava/: AbstractLua.java  ClassPathLoader.java  Consts.java  ExternalLoader.java  JFunction.java  Jua.java  JuaAPI.java  Lua.java  LuaException.java  LuaInstances.java  LuaNatives.java  LuaProxy.java  NotNull.java  Nullable.java  package-info.java
app/src/main/java/com/luajava/cleaner/: LuaReferable.java  LuaReference.java
app/src/main/java/com/luajava/luajit/: LuaJit.java  LuaJitConsts.java  LuaJitNatives.java
app/src/main/java/com/luajava/util/: ClassUtils.java  GlobalLibraryLoader.java  (+3 more)
app/src/main/java/com/nexlua/: AssetExtractor.java  CrashActivity.java  CrashHandler.java  GlobalCrashHandler.java  LuaActivity.java  LuaApplication.java  LuaBroadcastReceiver.java  LuaConfig.java  LuaContext.java  LuaDexClassLoader.java  LuaDexLoader.java  LuaModule.java  LuaPrint.java  LuaResources.java  LuaUtil.java  Main.java  Main2.java  Main3.java  Welcome.java
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
